name:          gl
version:       0.5
synopsis:      Complete OpenGL raw bindings
description:   Complete OpenGL raw bindings
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett, Gabríel Arthúr Pétursson, Sven Panne
maintainer:    ekmett@gmail.com
copyright:     Copyright © 2014 Edward A. Kmett,
               Copyright © 2014 Gabríel Arthúr Pétursson,
               Copyright © 2013 Sven Panne
category:      Graphics
build-type:    Custom
cabal-version: >=1.18
extra-source-files:
  gl.xml man.txt extensions.txt
  CHANGELOG.markdown README.markdown TODO.markdown
  Generator.hs Module.hs Parser.hs Registry.hs Utils.hs

source-repository head
  type:     git
  location: https://github.com/ekmett/gl

flag UseNativeWindowsLibraries
   description:
      When compiling under Windows, use the native libraries instead of e.g. the
      ones coming with Cygwin.

flag UseGlXGetProcAddress
   description:
      Use glXGetProcAddress instead of dlsym on non-Windows/-Darwin platforms.

library
  hs-source-dirs: src
  c-sources: cbits/gl.c
  ghc-options: -Wall -O2

  build-depends:
      base == 4.*
    , containers == 0.5.*
    , fixed >= 0.2.1 && < 0.3
    , half >= 0.2 && < 0.3
    , transformers >= 0.2 && < 0.5

  -- for Setup.hs
  build-depends:
      directory == 1.2.*
    , filepath == 1.3.*
    , hxt == 9.3.*
    , split == 0.2.*

  default-language: Haskell2010

  if os(windows) && flag(UseNativeWindowsLibraries)
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_WGLGETPROCADDRESS"
    extra-libraries: opengl32
  else
    cpp-options: "-DCALLCONV=ccall"
    if !os(darwin) && !os(ios) && flag(UseGlXGetProcAddress)
      cc-options: "-DUSE_GLXGETPROCADDRESS"
    else
      cc-options: "-DUSE_DLSYM"
    if os(darwin)
      frameworks: OpenGL
    else
      if os(ios)
        frameworks: OpenGLES
      else
        extra-libraries: GL

  exposed-modules:
    Graphics.GL.Internal.FFI
    Graphics.GL.Internal.Proc
    Graphics.GL.Internal.Shared
    Graphics.GL.Types
    Graphics.GL.Profile.Compatibility32
    Graphics.GL.Profile.Compatibility33
    Graphics.GL.Profile.Compatibility40
    Graphics.GL.Profile.Compatibility41
    Graphics.GL.Profile.Compatibility42
    Graphics.GL.Profile.Compatibility43
    Graphics.GL.Profile.Compatibility44
    Graphics.GL.Profile.Compatibility45
    Graphics.GL.Profile.Core32
    Graphics.GL.Profile.Core33
    Graphics.GL.Profile.Core40
    Graphics.GL.Profile.Core41
    Graphics.GL.Profile.Core42
    Graphics.GL.Profile.Core43
    Graphics.GL.Profile.Core44
    Graphics.GL.Profile.Core45
    Graphics.GL.Profile.EmbeddedCommon11
    Graphics.GL.Profile.EmbeddedLite11
    Graphics.GL.Profile.Embedded20
    Graphics.GL.Profile.Embedded30
    Graphics.GL.Profile.Embedded31
    Graphics.GL.Profile.Standard10
    Graphics.GL.Profile.Standard11
    Graphics.GL.Profile.Standard12
    Graphics.GL.Profile.Standard13
    Graphics.GL.Profile.Standard14
    Graphics.GL.Profile.Standard15
    Graphics.GL.Profile.Standard20
    Graphics.GL.Profile.Standard21
    Graphics.GL.Profile.Standard30
    Graphics.GL.Profile.Standard31
    Graphics.GL.Raw
    Graphics.GL.Raw.ThreeDFX
    Graphics.GL.Raw.ThreeDFX.Multisample
    Graphics.GL.Raw.ThreeDFX.Tbuffer
    Graphics.GL.Raw.ThreeDFX.TextureCompressionFXT1
    Graphics.GL.Raw.AMD
    Graphics.GL.Raw.AMD.BlendMinmaxFactor
    Graphics.GL.Raw.AMD.Compressed3DCTexture
    Graphics.GL.Raw.AMD.CompressedATCTexture
    Graphics.GL.Raw.AMD.ConservativeDepth
    Graphics.GL.Raw.AMD.DebugOutput
    Graphics.GL.Raw.AMD.DepthClampSeparate
    Graphics.GL.Raw.AMD.DrawBuffersBlend
    Graphics.GL.Raw.AMD.GcnShader
    Graphics.GL.Raw.AMD.GpuShaderInt64
    Graphics.GL.Raw.AMD.InterleavedElements
    Graphics.GL.Raw.AMD.MultiDrawIndirect
    Graphics.GL.Raw.AMD.NameGenDelete
    Graphics.GL.Raw.AMD.OcclusionQueryEvent
    Graphics.GL.Raw.AMD.PerformanceMonitor
    Graphics.GL.Raw.AMD.PinnedMemory
    Graphics.GL.Raw.AMD.ProgramBinaryZ400
    Graphics.GL.Raw.AMD.QueryBufferObject
    Graphics.GL.Raw.AMD.SamplePositions
    Graphics.GL.Raw.AMD.SeamlessCubemapPerTexture
    Graphics.GL.Raw.AMD.ShaderAtomicCounterOps
    Graphics.GL.Raw.AMD.ShaderStencilExport
    Graphics.GL.Raw.AMD.ShaderTrinaryMinmax
    Graphics.GL.Raw.AMD.SparseTexture
    Graphics.GL.Raw.AMD.StencilOperationExtended
    Graphics.GL.Raw.AMD.TextureTexture4
    Graphics.GL.Raw.AMD.TransformFeedback3LinesTriangles
    Graphics.GL.Raw.AMD.TransformFeedback4
    Graphics.GL.Raw.AMD.VertexShaderLayer
    Graphics.GL.Raw.AMD.VertexShaderTessellator
    Graphics.GL.Raw.AMD.VertexShaderViewportIndex
    Graphics.GL.Raw.ANDROID
    Graphics.GL.Raw.ANDROID.ExtensionPackEs31a
    Graphics.GL.Raw.ANGLE
    Graphics.GL.Raw.ANGLE.DepthTexture
    Graphics.GL.Raw.ANGLE.FramebufferBlit
    Graphics.GL.Raw.ANGLE.FramebufferMultisample
    Graphics.GL.Raw.ANGLE.InstancedArrays
    Graphics.GL.Raw.ANGLE.PackReverseRowOrder
    Graphics.GL.Raw.ANGLE.ProgramBinary
    Graphics.GL.Raw.ANGLE.TextureCompressionDxt3
    Graphics.GL.Raw.ANGLE.TextureCompressionDxt5
    Graphics.GL.Raw.ANGLE.TextureUsage
    Graphics.GL.Raw.ANGLE.TranslatedShaderSource
    Graphics.GL.Raw.APPLE
    Graphics.GL.Raw.APPLE.AuxDepthStencil
    Graphics.GL.Raw.APPLE.ClientStorage
    Graphics.GL.Raw.APPLE.ClipDistance
    Graphics.GL.Raw.APPLE.ColorBufferPackedFloat
    Graphics.GL.Raw.APPLE.CopyTextureLevels
    Graphics.GL.Raw.APPLE.ElementArray
    Graphics.GL.Raw.APPLE.Fence
    Graphics.GL.Raw.APPLE.FloatPixels
    Graphics.GL.Raw.APPLE.FlushBufferRange
    Graphics.GL.Raw.APPLE.FramebufferMultisample
    Graphics.GL.Raw.APPLE.ObjectPurgeable
    Graphics.GL.Raw.APPLE.Rgb422
    Graphics.GL.Raw.APPLE.RowBytes
    Graphics.GL.Raw.APPLE.SpecularVector
    Graphics.GL.Raw.APPLE.Sync
    Graphics.GL.Raw.APPLE.Texture2DLimitedNpot
    Graphics.GL.Raw.APPLE.TextureFormatBGRA8888
    Graphics.GL.Raw.APPLE.TextureMaxLevel
    Graphics.GL.Raw.APPLE.TexturePackedFloat
    Graphics.GL.Raw.APPLE.TextureRange
    Graphics.GL.Raw.APPLE.TransformHint
    Graphics.GL.Raw.APPLE.VertexArrayObject
    Graphics.GL.Raw.APPLE.VertexArrayRange
    Graphics.GL.Raw.APPLE.VertexProgramEvaluators
    Graphics.GL.Raw.APPLE.Ycbcr422
    Graphics.GL.Raw.ARB
    Graphics.GL.Raw.ARB.ES2Compatibility
    Graphics.GL.Raw.ARB.ES31Compatibility
    Graphics.GL.Raw.ARB.ES3Compatibility
    Graphics.GL.Raw.ARB.ArraysOfArrays
    Graphics.GL.Raw.ARB.BaseInstance
    Graphics.GL.Raw.ARB.BindlessTexture
    Graphics.GL.Raw.ARB.BlendFuncExtended
    Graphics.GL.Raw.ARB.BufferStorage
    Graphics.GL.Raw.ARB.ClEvent
    Graphics.GL.Raw.ARB.ClearBufferObject
    Graphics.GL.Raw.ARB.ClearTexture
    Graphics.GL.Raw.ARB.ClipControl
    Graphics.GL.Raw.ARB.ColorBufferFloat
    Graphics.GL.Raw.ARB.Compatibility
    Graphics.GL.Raw.ARB.CompressedTexturePixelStorage
    Graphics.GL.Raw.ARB.ComputeShader
    Graphics.GL.Raw.ARB.ComputeVariableGroupSize
    Graphics.GL.Raw.ARB.ConditionalRenderInverted
    Graphics.GL.Raw.ARB.ConservativeDepth
    Graphics.GL.Raw.ARB.CopyBuffer
    Graphics.GL.Raw.ARB.CopyImage
    Graphics.GL.Raw.ARB.CullDistance
    Graphics.GL.Raw.ARB.DebugOutput
    Graphics.GL.Raw.ARB.DepthBufferFloat
    Graphics.GL.Raw.ARB.DepthClamp
    Graphics.GL.Raw.ARB.DepthTexture
    Graphics.GL.Raw.ARB.DerivativeControl
    Graphics.GL.Raw.ARB.DirectStateAccess
    Graphics.GL.Raw.ARB.DrawBuffers
    Graphics.GL.Raw.ARB.DrawBuffersBlend
    Graphics.GL.Raw.ARB.DrawElementsBaseVertex
    Graphics.GL.Raw.ARB.DrawIndirect
    Graphics.GL.Raw.ARB.DrawInstanced
    Graphics.GL.Raw.ARB.EnhancedLayouts
    Graphics.GL.Raw.ARB.ExplicitAttribLocation
    Graphics.GL.Raw.ARB.ExplicitUniformLocation
    Graphics.GL.Raw.ARB.FragmentCoordConventions
    Graphics.GL.Raw.ARB.FragmentLayerViewport
    Graphics.GL.Raw.ARB.FragmentProgram
    Graphics.GL.Raw.ARB.FragmentProgramShadow
    Graphics.GL.Raw.ARB.FragmentShader
    Graphics.GL.Raw.ARB.FramebufferNoAttachments
    Graphics.GL.Raw.ARB.FramebufferObject
    Graphics.GL.Raw.ARB.FramebufferSRGB
    Graphics.GL.Raw.ARB.GeometryShader4
    Graphics.GL.Raw.ARB.GetProgramBinary
    Graphics.GL.Raw.ARB.GetTextureSubImage
    Graphics.GL.Raw.ARB.GpuShader5
    Graphics.GL.Raw.ARB.GpuShaderFp64
    Graphics.GL.Raw.ARB.HalfFloatPixel
    Graphics.GL.Raw.ARB.HalfFloatVertex
    Graphics.GL.Raw.ARB.Imaging
    Graphics.GL.Raw.ARB.IndirectParameters
    Graphics.GL.Raw.ARB.InstancedArrays
    Graphics.GL.Raw.ARB.InternalformatQuery
    Graphics.GL.Raw.ARB.InternalformatQuery2
    Graphics.GL.Raw.ARB.InvalidateSubdata
    Graphics.GL.Raw.ARB.MapBufferAlignment
    Graphics.GL.Raw.ARB.MapBufferRange
    Graphics.GL.Raw.ARB.MatrixPalette
    Graphics.GL.Raw.ARB.MultiBind
    Graphics.GL.Raw.ARB.MultiDrawIndirect
    Graphics.GL.Raw.ARB.Multisample
    Graphics.GL.Raw.ARB.Multitexture
    Graphics.GL.Raw.ARB.OcclusionQuery
    Graphics.GL.Raw.ARB.OcclusionQuery2
    Graphics.GL.Raw.ARB.PipelineStatisticsQuery
    Graphics.GL.Raw.ARB.PixelBufferObject
    Graphics.GL.Raw.ARB.PointParameters
    Graphics.GL.Raw.ARB.PointSprite
    Graphics.GL.Raw.ARB.ProgramInterfaceQuery
    Graphics.GL.Raw.ARB.ProvokingVertex
    Graphics.GL.Raw.ARB.QueryBufferObject
    Graphics.GL.Raw.ARB.RobustBufferAccessBehavior
    Graphics.GL.Raw.ARB.Robustness
    Graphics.GL.Raw.ARB.RobustnessIsolation
    Graphics.GL.Raw.ARB.SampleShading
    Graphics.GL.Raw.ARB.SamplerObjects
    Graphics.GL.Raw.ARB.SeamlessCubeMap
    Graphics.GL.Raw.ARB.SeamlessCubemapPerTexture
    Graphics.GL.Raw.ARB.SeparateShaderObjects
    Graphics.GL.Raw.ARB.ShaderAtomicCounters
    Graphics.GL.Raw.ARB.ShaderBitEncoding
    Graphics.GL.Raw.ARB.ShaderDrawParameters
    Graphics.GL.Raw.ARB.ShaderGroupVote
    Graphics.GL.Raw.ARB.ShaderImageLoadStore
    Graphics.GL.Raw.ARB.ShaderImageSize
    Graphics.GL.Raw.ARB.ShaderObjects
    Graphics.GL.Raw.ARB.ShaderPrecision
    Graphics.GL.Raw.ARB.ShaderStencilExport
    Graphics.GL.Raw.ARB.ShaderStorageBufferObject
    Graphics.GL.Raw.ARB.ShaderSubroutine
    Graphics.GL.Raw.ARB.ShaderTextureImageSamples
    Graphics.GL.Raw.ARB.ShaderTextureLod
    Graphics.GL.Raw.ARB.ShadingLanguage100
    Graphics.GL.Raw.ARB.ShadingLanguage420pack
    Graphics.GL.Raw.ARB.ShadingLanguageInclude
    Graphics.GL.Raw.ARB.ShadingLanguagePacking
    Graphics.GL.Raw.ARB.Shadow
    Graphics.GL.Raw.ARB.ShadowAmbient
    Graphics.GL.Raw.ARB.SparseBuffer
    Graphics.GL.Raw.ARB.SparseTexture
    Graphics.GL.Raw.ARB.StencilTexturing
    Graphics.GL.Raw.ARB.Sync
    Graphics.GL.Raw.ARB.TessellationShader
    Graphics.GL.Raw.ARB.TextureBarrier
    Graphics.GL.Raw.ARB.TextureBorderClamp
    Graphics.GL.Raw.ARB.TextureBufferObject
    Graphics.GL.Raw.ARB.TextureBufferObjectRgb32
    Graphics.GL.Raw.ARB.TextureBufferRange
    Graphics.GL.Raw.ARB.TextureCompression
    Graphics.GL.Raw.ARB.TextureCompressionBptc
    Graphics.GL.Raw.ARB.TextureCompressionRgtc
    Graphics.GL.Raw.ARB.TextureCubeMap
    Graphics.GL.Raw.ARB.TextureCubeMapArray
    Graphics.GL.Raw.ARB.TextureEnvAdd
    Graphics.GL.Raw.ARB.TextureEnvCombine
    Graphics.GL.Raw.ARB.TextureEnvCrossbar
    Graphics.GL.Raw.ARB.TextureEnvDot3
    Graphics.GL.Raw.ARB.TextureFloat
    Graphics.GL.Raw.ARB.TextureGather
    Graphics.GL.Raw.ARB.TextureMirrorClampToEdge
    Graphics.GL.Raw.ARB.TextureMirroredRepeat
    Graphics.GL.Raw.ARB.TextureMultisample
    Graphics.GL.Raw.ARB.TextureNonPowerOfTwo
    Graphics.GL.Raw.ARB.TextureQueryLevels
    Graphics.GL.Raw.ARB.TextureQueryLod
    Graphics.GL.Raw.ARB.TextureRectangle
    Graphics.GL.Raw.ARB.TextureRg
    Graphics.GL.Raw.ARB.TextureRgb10A2ui
    Graphics.GL.Raw.ARB.TextureStencil8
    Graphics.GL.Raw.ARB.TextureStorage
    Graphics.GL.Raw.ARB.TextureStorageMultisample
    Graphics.GL.Raw.ARB.TextureSwizzle
    Graphics.GL.Raw.ARB.TextureView
    Graphics.GL.Raw.ARB.TimerQuery
    Graphics.GL.Raw.ARB.TransformFeedback2
    Graphics.GL.Raw.ARB.TransformFeedback3
    Graphics.GL.Raw.ARB.TransformFeedbackInstanced
    Graphics.GL.Raw.ARB.TransformFeedbackOverflowQuery
    Graphics.GL.Raw.ARB.TransposeMatrix
    Graphics.GL.Raw.ARB.UniformBufferObject
    Graphics.GL.Raw.ARB.VertexArrayBgra
    Graphics.GL.Raw.ARB.VertexArrayObject
    Graphics.GL.Raw.ARB.VertexAttrib64bit
    Graphics.GL.Raw.ARB.VertexAttribBinding
    Graphics.GL.Raw.ARB.VertexBlend
    Graphics.GL.Raw.ARB.VertexBufferObject
    Graphics.GL.Raw.ARB.VertexProgram
    Graphics.GL.Raw.ARB.VertexShader
    Graphics.GL.Raw.ARB.VertexType10f11f11fRev
    Graphics.GL.Raw.ARB.VertexType2101010Rev
    Graphics.GL.Raw.ARB.ViewportArray
    Graphics.GL.Raw.ARB.WindowPos
    Graphics.GL.Raw.ARM
    Graphics.GL.Raw.ARM.MaliProgramBinary
    Graphics.GL.Raw.ARM.MaliShaderBinary
    Graphics.GL.Raw.ARM.Rgba8
    Graphics.GL.Raw.ARM.ShaderFramebufferFetch
    Graphics.GL.Raw.ARM.ShaderFramebufferFetchDepthStencil
    Graphics.GL.Raw.ATI
    Graphics.GL.Raw.ATI.DrawBuffers
    Graphics.GL.Raw.ATI.ElementArray
    Graphics.GL.Raw.ATI.EnvmapBumpmap
    Graphics.GL.Raw.ATI.FragmentShader
    Graphics.GL.Raw.ATI.MapObjectBuffer
    Graphics.GL.Raw.ATI.Meminfo
    Graphics.GL.Raw.ATI.PixelFormatFloat
    Graphics.GL.Raw.ATI.PnTriangles
    Graphics.GL.Raw.ATI.SeparateStencil
    Graphics.GL.Raw.ATI.TextFragmentShader
    Graphics.GL.Raw.ATI.TextureEnvCombine3
    Graphics.GL.Raw.ATI.TextureFloat
    Graphics.GL.Raw.ATI.TextureMirrorOnce
    Graphics.GL.Raw.ATI.VertexArrayObject
    Graphics.GL.Raw.ATI.VertexAttribArrayObject
    Graphics.GL.Raw.ATI.VertexStreams
    Graphics.GL.Raw.DMP
    Graphics.GL.Raw.DMP.ProgramBinary
    Graphics.GL.Raw.DMP.ShaderBinary
    Graphics.GL.Raw.EXT
    Graphics.GL.Raw.EXT.FourTwoTwoPixels
    Graphics.GL.Raw.EXT.Abgr
    Graphics.GL.Raw.EXT.Bgra
    Graphics.GL.Raw.EXT.BindableUniform
    Graphics.GL.Raw.EXT.BlendColor
    Graphics.GL.Raw.EXT.BlendEquationSeparate
    Graphics.GL.Raw.EXT.BlendFuncSeparate
    Graphics.GL.Raw.EXT.BlendLogicOp
    Graphics.GL.Raw.EXT.BlendMinmax
    Graphics.GL.Raw.EXT.BlendSubtract
    Graphics.GL.Raw.EXT.ClipVolumeHint
    Graphics.GL.Raw.EXT.Cmyka
    Graphics.GL.Raw.EXT.ColorBufferHalfFloat
    Graphics.GL.Raw.EXT.ColorSubtable
    Graphics.GL.Raw.EXT.CompiledVertexArray
    Graphics.GL.Raw.EXT.Convolution
    Graphics.GL.Raw.EXT.CoordinateFrame
    Graphics.GL.Raw.EXT.CopyImage
    Graphics.GL.Raw.EXT.CopyTexture
    Graphics.GL.Raw.EXT.CullVertex
    Graphics.GL.Raw.EXT.DebugLabel
    Graphics.GL.Raw.EXT.DebugMarker
    Graphics.GL.Raw.EXT.DepthBoundsTest
    Graphics.GL.Raw.EXT.DirectStateAccess
    Graphics.GL.Raw.EXT.DiscardFramebuffer
    Graphics.GL.Raw.EXT.DisjointTimerQuery
    Graphics.GL.Raw.EXT.DrawBuffers
    Graphics.GL.Raw.EXT.DrawBuffers2
    Graphics.GL.Raw.EXT.DrawBuffersIndexed
    Graphics.GL.Raw.EXT.DrawInstanced
    Graphics.GL.Raw.EXT.DrawRangeElements
    Graphics.GL.Raw.EXT.FogCoord
    Graphics.GL.Raw.EXT.FramebufferBlit
    Graphics.GL.Raw.EXT.FramebufferMultisample
    Graphics.GL.Raw.EXT.FramebufferMultisampleBlitScaled
    Graphics.GL.Raw.EXT.FramebufferObject
    Graphics.GL.Raw.EXT.FramebufferSRGB
    Graphics.GL.Raw.EXT.GeometryPointSize
    Graphics.GL.Raw.EXT.GeometryShader
    Graphics.GL.Raw.EXT.GeometryShader4
    Graphics.GL.Raw.EXT.GpuProgramParameters
    Graphics.GL.Raw.EXT.GpuShader4
    Graphics.GL.Raw.EXT.GpuShader5
    Graphics.GL.Raw.EXT.Histogram
    Graphics.GL.Raw.EXT.IndexArrayFormats
    Graphics.GL.Raw.EXT.IndexFunc
    Graphics.GL.Raw.EXT.IndexMaterial
    Graphics.GL.Raw.EXT.IndexTexture
    Graphics.GL.Raw.EXT.InstancedArrays
    Graphics.GL.Raw.EXT.LightTexture
    Graphics.GL.Raw.EXT.MapBufferRange
    Graphics.GL.Raw.EXT.MiscAttribute
    Graphics.GL.Raw.EXT.MultiDrawArrays
    Graphics.GL.Raw.EXT.Multisample
    Graphics.GL.Raw.EXT.MultisampledRenderToTexture
    Graphics.GL.Raw.EXT.MultiviewDrawBuffers
    Graphics.GL.Raw.EXT.OcclusionQueryBoolean
    Graphics.GL.Raw.EXT.PackedDepthStencil
    Graphics.GL.Raw.EXT.PackedFloat
    Graphics.GL.Raw.EXT.PackedPixels
    Graphics.GL.Raw.EXT.PalettedTexture
    Graphics.GL.Raw.EXT.PixelBufferObject
    Graphics.GL.Raw.EXT.PixelTransform
    Graphics.GL.Raw.EXT.PixelTransformColorTable
    Graphics.GL.Raw.EXT.PointParameters
    Graphics.GL.Raw.EXT.PolygonOffset
    Graphics.GL.Raw.EXT.PolygonOffsetClamp
    Graphics.GL.Raw.EXT.PostDepthCoverage
    Graphics.GL.Raw.EXT.PrimitiveBoundingBox
    Graphics.GL.Raw.EXT.ProvokingVertex
    Graphics.GL.Raw.EXT.PvrtcSRGB
    Graphics.GL.Raw.EXT.RasterMultisample
    Graphics.GL.Raw.EXT.ReadFormatBgra
    Graphics.GL.Raw.EXT.RescaleNormal
    Graphics.GL.Raw.EXT.Robustness
    Graphics.GL.Raw.EXT.SRGB
    Graphics.GL.Raw.EXT.SRGBWriteControl
    Graphics.GL.Raw.EXT.SecondaryColor
    Graphics.GL.Raw.EXT.SeparateShaderObjects
    Graphics.GL.Raw.EXT.SeparateSpecularColor
    Graphics.GL.Raw.EXT.ShaderFramebufferFetch
    Graphics.GL.Raw.EXT.ShaderImageLoadFormatted
    Graphics.GL.Raw.EXT.ShaderImageLoadStore
    Graphics.GL.Raw.EXT.ShaderImplicitConversions
    Graphics.GL.Raw.EXT.ShaderIntegerMix
    Graphics.GL.Raw.EXT.ShaderIoBlocks
    Graphics.GL.Raw.EXT.ShaderPixelLocalStorage
    Graphics.GL.Raw.EXT.ShaderTextureLod
    Graphics.GL.Raw.EXT.ShadowFuncs
    Graphics.GL.Raw.EXT.ShadowSamplers
    Graphics.GL.Raw.EXT.SharedTexturePalette
    Graphics.GL.Raw.EXT.SparseTexture2
    Graphics.GL.Raw.EXT.StencilClearTag
    Graphics.GL.Raw.EXT.StencilTwoSide
    Graphics.GL.Raw.EXT.StencilWrap
    Graphics.GL.Raw.EXT.Subtexture
    Graphics.GL.Raw.EXT.TessellationPointSize
    Graphics.GL.Raw.EXT.TessellationShader
    Graphics.GL.Raw.EXT.Texture
    Graphics.GL.Raw.EXT.Texture3D
    Graphics.GL.Raw.EXT.TextureArray
    Graphics.GL.Raw.EXT.TextureBorderClamp
    Graphics.GL.Raw.EXT.TextureBuffer
    Graphics.GL.Raw.EXT.TextureBufferObject
    Graphics.GL.Raw.EXT.TextureCompressionDxt1
    Graphics.GL.Raw.EXT.TextureCompressionLatc
    Graphics.GL.Raw.EXT.TextureCompressionRgtc
    Graphics.GL.Raw.EXT.TextureCompressionS3tc
    Graphics.GL.Raw.EXT.TextureCubeMap
    Graphics.GL.Raw.EXT.TextureCubeMapArray
    Graphics.GL.Raw.EXT.TextureEnvAdd
    Graphics.GL.Raw.EXT.TextureEnvCombine
    Graphics.GL.Raw.EXT.TextureEnvDot3
    Graphics.GL.Raw.EXT.TextureFilterAnisotropic
    Graphics.GL.Raw.EXT.TextureFilterMinmax
    Graphics.GL.Raw.EXT.TextureFormatBGRA8888
    Graphics.GL.Raw.EXT.TextureInteger
    Graphics.GL.Raw.EXT.TextureLodBias
    Graphics.GL.Raw.EXT.TextureMirrorClamp
    Graphics.GL.Raw.EXT.TextureObject
    Graphics.GL.Raw.EXT.TexturePerturbNormal
    Graphics.GL.Raw.EXT.TextureRg
    Graphics.GL.Raw.EXT.TextureSRGB
    Graphics.GL.Raw.EXT.TextureSRGBDecode
    Graphics.GL.Raw.EXT.TextureSharedExponent
    Graphics.GL.Raw.EXT.TextureSnorm
    Graphics.GL.Raw.EXT.TextureStorage
    Graphics.GL.Raw.EXT.TextureSwizzle
    Graphics.GL.Raw.EXT.TextureType2101010REV
    Graphics.GL.Raw.EXT.TextureView
    Graphics.GL.Raw.EXT.TimerQuery
    Graphics.GL.Raw.EXT.TransformFeedback
    Graphics.GL.Raw.EXT.UnpackSubimage
    Graphics.GL.Raw.EXT.VertexArray
    Graphics.GL.Raw.EXT.VertexArrayBgra
    Graphics.GL.Raw.EXT.VertexAttrib64bit
    Graphics.GL.Raw.EXT.VertexShader
    Graphics.GL.Raw.EXT.VertexWeighting
    Graphics.GL.Raw.EXT.X11SyncObject
    Graphics.GL.Raw.FJ
    Graphics.GL.Raw.FJ.ShaderBinaryGCCSO
    Graphics.GL.Raw.GREMEDY
    Graphics.GL.Raw.GREMEDY.FrameTerminator
    Graphics.GL.Raw.GREMEDY.StringMarker
    Graphics.GL.Raw.HP
    Graphics.GL.Raw.HP.ConvolutionBorderModes
    Graphics.GL.Raw.HP.ImageTransform
    Graphics.GL.Raw.HP.OcclusionTest
    Graphics.GL.Raw.HP.TextureLighting
    Graphics.GL.Raw.IBM
    Graphics.GL.Raw.IBM.CullVertex
    Graphics.GL.Raw.IBM.MultimodeDrawArrays
    Graphics.GL.Raw.IBM.RasterposClip
    Graphics.GL.Raw.IBM.StaticData
    Graphics.GL.Raw.IBM.TextureMirroredRepeat
    Graphics.GL.Raw.IBM.VertexArrayLists
    Graphics.GL.Raw.IMG
    Graphics.GL.Raw.IMG.MultisampledRenderToTexture
    Graphics.GL.Raw.IMG.ProgramBinary
    Graphics.GL.Raw.IMG.ReadFormat
    Graphics.GL.Raw.IMG.ShaderBinary
    Graphics.GL.Raw.IMG.TextureCompressionPvrtc
    Graphics.GL.Raw.IMG.TextureCompressionPvrtc2
    Graphics.GL.Raw.IMG.TextureEnvEnhancedFixedFunction
    Graphics.GL.Raw.IMG.UserClipPlane
    Graphics.GL.Raw.INGR
    Graphics.GL.Raw.INGR.BlendFuncSeparate
    Graphics.GL.Raw.INGR.ColorClamp
    Graphics.GL.Raw.INGR.InterlaceRead
    Graphics.GL.Raw.INTEL
    Graphics.GL.Raw.INTEL.FragmentShaderOrdering
    Graphics.GL.Raw.INTEL.MapTexture
    Graphics.GL.Raw.INTEL.ParallelArrays
    Graphics.GL.Raw.INTEL.PerformanceQuery
    Graphics.GL.Raw.KHR
    Graphics.GL.Raw.KHR.BlendEquationAdvanced
    Graphics.GL.Raw.KHR.BlendEquationAdvancedCoherent
    Graphics.GL.Raw.KHR.ContextFlushControl
    Graphics.GL.Raw.KHR.Debug
    Graphics.GL.Raw.KHR.RobustBufferAccessBehavior
    Graphics.GL.Raw.KHR.Robustness
    Graphics.GL.Raw.KHR.TextureCompressionAstcHdr
    Graphics.GL.Raw.KHR.TextureCompressionAstcLdr
    Graphics.GL.Raw.MESAX
    Graphics.GL.Raw.MESAX.TextureStack
    Graphics.GL.Raw.MESA
    Graphics.GL.Raw.MESA.PackInvert
    Graphics.GL.Raw.MESA.ResizeBuffers
    Graphics.GL.Raw.MESA.WindowPos
    Graphics.GL.Raw.MESA.YcbcrTexture
    Graphics.GL.Raw.NVX
    Graphics.GL.Raw.NVX.ConditionalRender
    Graphics.GL.Raw.NVX.GpuMemoryInfo
    Graphics.GL.Raw.NV
    Graphics.GL.Raw.NV.BindlessMultiDrawIndirect
    Graphics.GL.Raw.NV.BindlessMultiDrawIndirectCount
    Graphics.GL.Raw.NV.BindlessTexture
    Graphics.GL.Raw.NV.BlendEquationAdvanced
    Graphics.GL.Raw.NV.BlendEquationAdvancedCoherent
    Graphics.GL.Raw.NV.BlendSquare
    Graphics.GL.Raw.NV.ComputeProgram5
    Graphics.GL.Raw.NV.ConditionalRender
    Graphics.GL.Raw.NV.ConservativeRaster
    Graphics.GL.Raw.NV.CopyBuffer
    Graphics.GL.Raw.NV.CopyDepthToColor
    Graphics.GL.Raw.NV.CopyImage
    Graphics.GL.Raw.NV.CoverageSample
    Graphics.GL.Raw.NV.DeepTexture3D
    Graphics.GL.Raw.NV.DepthBufferFloat
    Graphics.GL.Raw.NV.DepthClamp
    Graphics.GL.Raw.NV.DepthNonlinear
    Graphics.GL.Raw.NV.DrawBuffers
    Graphics.GL.Raw.NV.DrawInstanced
    Graphics.GL.Raw.NV.DrawTexture
    Graphics.GL.Raw.NV.Evaluators
    Graphics.GL.Raw.NV.ExplicitAttribLocation
    Graphics.GL.Raw.NV.ExplicitMultisample
    Graphics.GL.Raw.NV.FboColorAttachments
    Graphics.GL.Raw.NV.Fence
    Graphics.GL.Raw.NV.FillRectangle
    Graphics.GL.Raw.NV.FloatBuffer
    Graphics.GL.Raw.NV.FogDistance
    Graphics.GL.Raw.NV.FragmentCoverageToColor
    Graphics.GL.Raw.NV.FragmentProgram
    Graphics.GL.Raw.NV.FragmentProgram2
    Graphics.GL.Raw.NV.FragmentProgram4
    Graphics.GL.Raw.NV.FragmentProgramOption
    Graphics.GL.Raw.NV.FragmentShaderInterlock
    Graphics.GL.Raw.NV.FramebufferBlit
    Graphics.GL.Raw.NV.FramebufferMixedSamples
    Graphics.GL.Raw.NV.FramebufferMultisample
    Graphics.GL.Raw.NV.FramebufferMultisampleCoverage
    Graphics.GL.Raw.NV.GenerateMipmapSRGB
    Graphics.GL.Raw.NV.GeometryProgram4
    Graphics.GL.Raw.NV.GeometryShader4
    Graphics.GL.Raw.NV.GeometryShaderPassthrough
    Graphics.GL.Raw.NV.GpuProgram4
    Graphics.GL.Raw.NV.GpuProgram5
    Graphics.GL.Raw.NV.GpuProgram5MemExtended
    Graphics.GL.Raw.NV.GpuShader5
    Graphics.GL.Raw.NV.HalfFloat
    Graphics.GL.Raw.NV.InstancedArrays
    Graphics.GL.Raw.NV.InternalformatSampleQuery
    Graphics.GL.Raw.NV.LightMaxExponent
    Graphics.GL.Raw.NV.MultisampleCoverage
    Graphics.GL.Raw.NV.MultisampleFilterHint
    Graphics.GL.Raw.NV.NonSquareMatrices
    Graphics.GL.Raw.NV.OcclusionQuery
    Graphics.GL.Raw.NV.PackedDepthStencil
    Graphics.GL.Raw.NV.ParameterBufferObject
    Graphics.GL.Raw.NV.ParameterBufferObject2
    Graphics.GL.Raw.NV.PathRendering
    Graphics.GL.Raw.NV.PixelDataRange
    Graphics.GL.Raw.NV.PointSprite
    Graphics.GL.Raw.NV.PresentVideo
    Graphics.GL.Raw.NV.PrimitiveRestart
    Graphics.GL.Raw.NV.ReadBuffer
    Graphics.GL.Raw.NV.ReadBufferFront
    Graphics.GL.Raw.NV.ReadDepth
    Graphics.GL.Raw.NV.ReadDepthStencil
    Graphics.GL.Raw.NV.ReadStencil
    Graphics.GL.Raw.NV.RegisterCombiners
    Graphics.GL.Raw.NV.PathRenderingSharedEdge
    Graphics.GL.Raw.NV.RegisterCombiners2
    Graphics.GL.Raw.NV.SRGBFormats
    Graphics.GL.Raw.NV.SampleLocations
    Graphics.GL.Raw.NV.SampleMaskOverrideCoverage
    Graphics.GL.Raw.NV.ShaderAtomicCounters
    Graphics.GL.Raw.NV.ShaderAtomicFloat
    Graphics.GL.Raw.NV.ShaderAtomicFp16Vector
    Graphics.GL.Raw.NV.ShaderAtomicInt64
    Graphics.GL.Raw.NV.ShaderBufferLoad
    Graphics.GL.Raw.NV.ShaderBufferStore
    Graphics.GL.Raw.NV.ShaderStorageBufferObject
    Graphics.GL.Raw.NV.ShaderThreadGroup
    Graphics.GL.Raw.NV.ShaderThreadShuffle
    Graphics.GL.Raw.NV.ShadowSamplersArray
    Graphics.GL.Raw.NV.ShadowSamplersCube
    Graphics.GL.Raw.NV.TessellationProgram5
    Graphics.GL.Raw.NV.TexgenEmboss
    Graphics.GL.Raw.NV.TexgenReflection
    Graphics.GL.Raw.NV.TextureBarrier
    Graphics.GL.Raw.NV.TextureBorderClamp
    Graphics.GL.Raw.NV.TextureCompressionS3tcUpdate
    Graphics.GL.Raw.NV.TextureCompressionVtc
    Graphics.GL.Raw.NV.TextureEnvCombine4
    Graphics.GL.Raw.NV.TextureExpandNormal
    Graphics.GL.Raw.NV.TextureMultisample
    Graphics.GL.Raw.NV.TextureNpot2DMipmap
    Graphics.GL.Raw.NV.TextureRectangle
    Graphics.GL.Raw.NV.TextureShader
    Graphics.GL.Raw.NV.TextureShader2
    Graphics.GL.Raw.NV.TextureShader3
    Graphics.GL.Raw.NV.TransformFeedback
    Graphics.GL.Raw.NV.TransformFeedback2
    Graphics.GL.Raw.NV.UniformBufferUnifiedMemory
    Graphics.GL.Raw.NV.VdpauInterop
    Graphics.GL.Raw.NV.VertexArrayRange
    Graphics.GL.Raw.NV.VertexArrayRange2
    Graphics.GL.Raw.NV.VertexAttribInteger64bit
    Graphics.GL.Raw.NV.VertexBufferUnifiedMemory
    Graphics.GL.Raw.NV.VertexProgram
    Graphics.GL.Raw.NV.VertexProgram11
    Graphics.GL.Raw.NV.VertexProgram2
    Graphics.GL.Raw.NV.VertexProgram2Option
    Graphics.GL.Raw.NV.VertexProgram3
    Graphics.GL.Raw.NV.VertexProgram4
    Graphics.GL.Raw.NV.VideoCapture
    Graphics.GL.Raw.OES
    Graphics.GL.Raw.OES.EGLImage
    Graphics.GL.Raw.OES.EGLImageExternal
    Graphics.GL.Raw.OES.BlendEquationSeparate
    Graphics.GL.Raw.OES.BlendFuncSeparate
    Graphics.GL.Raw.OES.BlendSubtract
    Graphics.GL.Raw.OES.ByteCoordinates
    Graphics.GL.Raw.OES.CompressedETC1RGB8SubTexture
    Graphics.GL.Raw.OES.CompressedETC1RGB8Texture
    Graphics.GL.Raw.OES.CompressedPalettedTexture
    Graphics.GL.Raw.OES.Depth24
    Graphics.GL.Raw.OES.Depth32
    Graphics.GL.Raw.OES.DepthTexture
    Graphics.GL.Raw.OES.DrawTexture
    Graphics.GL.Raw.OES.ElementIndexUint
    Graphics.GL.Raw.OES.ExtendedMatrixPalette
    Graphics.GL.Raw.OES.FboRenderMipmap
    Graphics.GL.Raw.OES.FixedPoint
    Graphics.GL.Raw.OES.FragmentPrecisionHigh
    Graphics.GL.Raw.OES.FramebufferObject
    Graphics.GL.Raw.OES.GetProgramBinary
    Graphics.GL.Raw.OES.Mapbuffer
    Graphics.GL.Raw.OES.MatrixGet
    Graphics.GL.Raw.OES.MatrixPalette
    Graphics.GL.Raw.OES.PackedDepthStencil
    Graphics.GL.Raw.OES.PointSizeArray
    Graphics.GL.Raw.OES.PointSprite
    Graphics.GL.Raw.OES.QueryMatrix
    Graphics.GL.Raw.OES.ReadFormat
    Graphics.GL.Raw.OES.RequiredInternalformat
    Graphics.GL.Raw.OES.Rgb8Rgba8
    Graphics.GL.Raw.OES.SampleShading
    Graphics.GL.Raw.OES.SampleVariables
    Graphics.GL.Raw.OES.ShaderImageAtomic
    Graphics.GL.Raw.OES.ShaderMultisampleInterpolation
    Graphics.GL.Raw.OES.SinglePrecision
    Graphics.GL.Raw.OES.StandardDerivatives
    Graphics.GL.Raw.OES.Stencil1
    Graphics.GL.Raw.OES.Stencil4
    Graphics.GL.Raw.OES.Stencil8
    Graphics.GL.Raw.OES.StencilWrap
    Graphics.GL.Raw.OES.SurfacelessContext
    Graphics.GL.Raw.OES.Texture3D
    Graphics.GL.Raw.OES.TextureCompressionAstc
    Graphics.GL.Raw.OES.TextureCubeMap
    Graphics.GL.Raw.OES.TextureEnvCrossbar
    Graphics.GL.Raw.OES.TextureFloat
    Graphics.GL.Raw.OES.TextureFloatLinear
    Graphics.GL.Raw.OES.TextureHalfFloat
    Graphics.GL.Raw.OES.TextureHalfFloatLinear
    Graphics.GL.Raw.OES.TextureMirroredRepeat
    Graphics.GL.Raw.OES.TextureNpot
    Graphics.GL.Raw.OES.TextureStencil8
    Graphics.GL.Raw.OES.TextureStorageMultisample2dArray
    Graphics.GL.Raw.OES.VertexArrayObject
    Graphics.GL.Raw.OES.VertexHalfFloat
    Graphics.GL.Raw.OES.VertexType1010102
    Graphics.GL.Raw.OML
    Graphics.GL.Raw.OML.Interlace
    Graphics.GL.Raw.OML.Resample
    Graphics.GL.Raw.OML.Subsample
    Graphics.GL.Raw.PGI
    Graphics.GL.Raw.PGI.MiscHints
    Graphics.GL.Raw.PGI.VertexHints
    Graphics.GL.Raw.QCOM
    Graphics.GL.Raw.QCOM.AlphaTest
    Graphics.GL.Raw.QCOM.BinningControl
    Graphics.GL.Raw.QCOM.DriverControl
    Graphics.GL.Raw.QCOM.ExtendedGet
    Graphics.GL.Raw.QCOM.ExtendedGet2
    Graphics.GL.Raw.QCOM.PerfmonGlobalMode
    Graphics.GL.Raw.QCOM.TiledRendering
    Graphics.GL.Raw.QCOM.WriteonlyRendering
    Graphics.GL.Raw.REND
    Graphics.GL.Raw.REND.ScreenCoordinates
    Graphics.GL.Raw.S3
    Graphics.GL.Raw.S3.S3tc
    Graphics.GL.Raw.SGIS
    Graphics.GL.Raw.SGIS.DetailTexture
    Graphics.GL.Raw.SGIS.FogFunction
    Graphics.GL.Raw.SGIS.GenerateMipmap
    Graphics.GL.Raw.SGIS.Multisample
    Graphics.GL.Raw.SGIS.PixelTexture
    Graphics.GL.Raw.SGIS.PointLineTexgen
    Graphics.GL.Raw.SGIS.PointParameters
    Graphics.GL.Raw.SGIS.SharpenTexture
    Graphics.GL.Raw.SGIS.Texture4D
    Graphics.GL.Raw.SGIS.TextureBorderClamp
    Graphics.GL.Raw.SGIS.TextureColorMask
    Graphics.GL.Raw.SGIS.TextureEdgeClamp
    Graphics.GL.Raw.SGIS.TextureFilter4
    Graphics.GL.Raw.SGIS.TextureLod
    Graphics.GL.Raw.SGIS.TextureSelect
    Graphics.GL.Raw.SGIX
    Graphics.GL.Raw.SGIX.Async
    Graphics.GL.Raw.SGIX.AsyncHistogram
    Graphics.GL.Raw.SGIX.AsyncPixel
    Graphics.GL.Raw.SGIX.BlendAlphaMinmax
    Graphics.GL.Raw.SGIX.CalligraphicFragment
    Graphics.GL.Raw.SGIX.Clipmap
    Graphics.GL.Raw.SGIX.ConvolutionAccuracy
    Graphics.GL.Raw.SGIX.DepthPassInstrument
    Graphics.GL.Raw.SGIX.DepthTexture
    Graphics.GL.Raw.SGIX.FlushRaster
    Graphics.GL.Raw.SGIX.FogOffset
    Graphics.GL.Raw.SGIX.FragmentLighting
    Graphics.GL.Raw.SGIX.Framezoom
    Graphics.GL.Raw.SGIX.IglooInterface
    Graphics.GL.Raw.SGIX.Instruments
    Graphics.GL.Raw.SGIX.Interlace
    Graphics.GL.Raw.SGIX.IrInstrument1
    Graphics.GL.Raw.SGIX.ListPriority
    Graphics.GL.Raw.SGIX.PixelTexture
    Graphics.GL.Raw.SGIX.PixelTiles
    Graphics.GL.Raw.SGIX.PolynomialFfd
    Graphics.GL.Raw.SGIX.ReferencePlane
    Graphics.GL.Raw.SGIX.Resample
    Graphics.GL.Raw.SGIX.ScalebiasHint
    Graphics.GL.Raw.SGIX.Shadow
    Graphics.GL.Raw.SGIX.ShadowAmbient
    Graphics.GL.Raw.SGIX.Sprite
    Graphics.GL.Raw.SGIX.Subsample
    Graphics.GL.Raw.SGIX.TagSampleBuffer
    Graphics.GL.Raw.SGIX.TextureAddEnv
    Graphics.GL.Raw.SGIX.TextureCoordinateClamp
    Graphics.GL.Raw.SGIX.TextureLodBias
    Graphics.GL.Raw.SGIX.TextureMultiBuffer
    Graphics.GL.Raw.SGIX.TextureScaleBias
    Graphics.GL.Raw.SGIX.VertexPreclip
    Graphics.GL.Raw.SGIX.Ycrcb
    Graphics.GL.Raw.SGIX.YcrcbSubsample
    Graphics.GL.Raw.SGIX.Ycrcba
    Graphics.GL.Raw.SGI
    Graphics.GL.Raw.SGI.ColorMatrix
    Graphics.GL.Raw.SGI.ColorTable
    Graphics.GL.Raw.SGI.TextureColorTable
    Graphics.GL.Raw.SUNX
    Graphics.GL.Raw.SUNX.ConstantData
    Graphics.GL.Raw.SUN
    Graphics.GL.Raw.SUN.ConvolutionBorderModes
    Graphics.GL.Raw.SUN.GlobalAlpha
    Graphics.GL.Raw.SUN.MeshArray
    Graphics.GL.Raw.SUN.SliceAccum
    Graphics.GL.Raw.SUN.TriangleList
    Graphics.GL.Raw.SUN.Vertex
    Graphics.GL.Raw.VIV
    Graphics.GL.Raw.VIV.ShaderBinary
    Graphics.GL.Raw.WIN
    Graphics.GL.Raw.WIN.PhongShading
    Graphics.GL.Raw.WIN.SpecularFog
